fix: Default to SOE instead of SOST

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{{ site_config.college_name|default:"School of Science and Technology" }} - MBMAN{% endblock %}</title>
+    <title>{% block title %}{{ site_config.college_name|default:"College of Engineering" }} - MBMAN{% endblock %}</title>
     {% if site_logo and site_logo.logo %}
     <link rel="icon" type="image/x-icon" href="{{ site_logo.logo.url }}">
     <link rel="apple-touch-icon" href="{{ site_logo.logo.url }}">
