feat: fix COE Typo

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load custom_filters %}
 
-{% block title %}School of Science and Technology - MBMAN{% endblock %}
+{% block title %}College of Engineering{% endblock %}
 
 {% block inline_styles %}
 /* Custom scrollbar for notices */
