Fix: When empty notice say COE instaed of SOST

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -125,7 +125,7 @@
                     </a>
                     {% if not forloop.last %}<span class="text-gray-700 mx-4">|</span>{% endif %}
                     {% empty %}
-                    <a href="{% url 'home:notices_page' %}" class="hover:text-white transition">Welcome to MBMAN School of Science & Technology</a>
+                    <a href="{% url 'home:notices_page' %}" class="hover:text-white transition">Welcome to MBMAN College of Engineering</a>
                     {% endfor %}
                 </div>
                 <div class="marquee-content" aria-hidden="true">
