fix: Update welcome message to reflect College of Engineering

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -140,7 +140,7 @@
                     </a>
                     {% if not forloop.last %}<span class="text-gray-700 mx-4">|</span>{% endif %}
                     {% empty %}
-                    <a href="#notices" class="hover:text-white transition">Welcome to MBMAN School of Science & Technology</a>
+                    <a href="#notices" class="hover:text-white transition">Welcome to MBMAN College of Engineering</a>
                     {% endfor %}
                 </div>
             </div>
